--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="features">
             <div class="feature">
                 <span class="feature-icon">✓</span>
-                <span>Опишите ситуацию с сотрудником</span>
+                <span>Опишите ситуацию</span>
             </div>
             <div class="feature">
                 <span class="feature-icon">✓</span>
@@ -176,6 +176,10 @@
             <div class="feature">
                 <span class="feature-icon">✓</span>
                 <span>Получите план: что сказать, как действовать, чего избегать</span>
+            </div>
+            <div class="feature">
+                <span class="feature-icon">✓</span>
+                <span>* Не передавайте AI персональные данные<br> ** Перед серьезными кадровыми решениями посоветуйтесь с HR и юристами</span>
             </div>
         </div>
         
