--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
                 <span>Получите план: что сказать, как действовать, чего избегать</span>
             </div>
             <div class="feature">
-                <span class="feature-icon">!</span>
-                <span>Не передавайте AI персональные данные</span>
+                <span class="feature-icon">X</span>
+                <span>!!! Не передавайте AI-консультанту персональные данные</span>
             </div>
             <div class="feature">
-                <span class="feature-icon">!</span>
-                <span>Перед кадровыми решениями посоветуйтесь с HR и юристами</span>
+                <span class="feature-icon">X</span>
+                <span>!!! Перед кадровыми решениями посоветуйтесь с HR и юристами</span>
             </div>
         </div>
         
@@ -192,7 +192,7 @@
         </p>
         
         <div class="credentials">
-            Основано на 20-летнем опыте работы с крупными компаниями РФ и СНГ.<br>
+            Основано на 20-летнем опыте работы с крупными компаниями РФ и СНГ<br>
             (C) 2025, Mindfulness DOO
         </div>
     </div>
