--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         
         <h2>Упала мотивация?</h2>
         <h2>Конфликты в команде?</h2>
-        <h2>Непонятно что делать?</h2>
+        <h2>Сотрудники бесят?</h2>
 
         <p class="subtitle"><br>Получите советы от AI-консультанта прямо сейчас</p>
               
