--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="feature">
                 <span class="feature-icon">✓</span>
-                <span>Ответьте на 2-3 уточняющих вопроса</span>
+                <span>Ответьте на 2-3 вопроса</span>
             </div>
             <div class="feature">
                 <span class="feature-icon">✓</span>
