--- a/index.html
+++ b/index.html
@@ -1,277 +1,281 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AI-консультант для руководителей и HR">
-  <title>AI-консультант для руководителей и HR</title>
-  <style>
-    :root {
-      --bg-start: #0b1020;
-      --bg-end: #101426;
-      --text: #e5e7eb;
-      --muted: #9aa3af;
-      --card-bg: rgba(17, 24, 39, 0.7);
-      --border: rgba(255, 255, 255, 0.08);
-      --accent: #4f46e5;
-      --accent-2: #06b6d4;
-      --success: #22c55e;
-      --warn: #f59e0b;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AI-консультант для руководителей и HR">
+    <title>AI-консультант для руководителей и HR</title>
+    <!-- Modern Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    <style>
+        :root {
+            --bg-dark: #121212;
+            --bg-graphite: #1E1E1E;
+            --accent-color: #D4FF00;
+            /* Acid Yellow/Green */
+            --glass-bg: rgba(30, 30, 30, 0.6);
+            --glass-border: rgba(255, 255, 255, 0.1);
+            --text-main: #FFFFFF;
+            --text-secondary: #A0A0A0;
+            --text-muted: #666666;
+            --shadow-glow: 0 0 20px rgba(212, 255, 0, 0.15);
+        }
 
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      line-height: 1.6;
-      color: var(--text);
-      background:
-        radial-gradient(1200px circle at 30% -10%, #1f2937 0%, transparent 50%),
-        linear-gradient(135deg, var(--bg-start), var(--bg-end));
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 24px;
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    .container {
-      max-width: 720px;
-      width: 100%;
-      background: var(--card-bg);
-      border: 1px solid var(--border);
-      border-radius: 24px;
-      padding: 40px 36px;
-      backdrop-filter: blur(12px) saturate(120%);
-      box-shadow: 0 30px 80px rgba(0, 0, 0, 0.45);
-    }
+        body {
+            font-family: 'Outfit', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            line-height: 1.6;
+            color: var(--text-main);
+            background-color: var(--bg-dark);
+            background-image:
+                radial-gradient(circle at 10% 20%, rgba(212, 255, 0, 0.03) 0%, transparent 40%),
+                radial-gradient(circle at 90% 80%, rgba(212, 255, 0, 0.03) 0%, transparent 40%),
+                linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
 
-    .brand {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 24px;
-    }
+        .container {
+            max-width: 600px;
+            width: 100%;
+            background: var(--glass-bg);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid var(--glass-border);
+            border-top: 1px solid rgba(255, 255, 255, 0.15);
+            border-radius: 24px;
+            padding: 50px 40px;
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
 
-    .mark {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      border-radius: 12px;
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      color: white;
-      font-weight: 700;
-      letter-spacing: 0.02em;
-    }
+        /* Subtle glow effect on top */
+        .container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+        }
 
-    .title {
-      font-size: 34px;
-      font-weight: 800;
-      letter-spacing: -0.02em;
-      margin-bottom: 16px;
-    }
+        .emoji {
+            font-size: 64px;
+            margin-bottom: 25px;
+            display: block;
+            filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
+            animation: float 6s ease-in-out infinite;
+        }
 
-    .chips {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 16px;
-    }
+        @keyframes float {
+            0% {
+                transform: translateY(0px);
+            }
 
-    .chip {
-      display: inline-flex;
-      align-items: center;
-      padding: 8px 12px;
-      border-radius: 999px;
-      font-size: 14px;
-      color: var(--muted);
-      border: 1px solid var(--border);
-      background: rgba(255, 255, 255, 0.02);
-    }
+            50% {
+                transform: translateY(-10px);
+            }
 
-    .subtitle {
-      font-size: 18px;
-      color: var(--muted);
-      margin-bottom: 24px;
-    }
+            100% {
+                transform: translateY(0px);
+            }
+        }
 
-    .features {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 14px;
-      margin: 24px 0 8px 0;
-    }
+        h2 {
+            font-size: 32px;
+            font-weight: 700;
+            color: var(--text-main);
+            margin-bottom: 8px;
+            line-height: 1.2;
+            letter-spacing: -0.02em;
+        }
 
-    .feature {
-      display: grid;
-      grid-template-columns: 24px 1fr;
-      gap: 12px;
-      align-items: start;
-      font-size: 16px;
-      color: #d1d5db;
-    }
+        .subtitle {
+            font-size: 18px;
+            color: var(--text-secondary);
+            margin-bottom: 40px;
+            line-height: 1.5;
+            font-weight: 300;
+        }
 
-    .feature-icon {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 24px;
-      height: 24px;
-      border-radius: 8px;
-      background: rgba(255, 255, 255, 0.06);
-      color: var(--success);
-      font-size: 14px;
-      flex-shrink: 0;
-    }
+        .description {
+            font-size: 16px;
+            color: var(--text-secondary);
+            margin-bottom: 25px;
+            padding: 0 10px;
+        }
 
-    .feature-icon.warn {
-      color: var(--warn);
-    }
+        .features {
+            text-align: left;
+            margin: 40px 0;
+            padding: 0 10px;
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 16px;
+            padding: 24px;
+            border: 1px solid rgba(255, 255, 255, 0.03);
+        }
 
-    .cta {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 10px;
-    }
+        .feature {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 16px;
+            font-size: 16px;
+            color: var(--text-secondary);
+        }
 
-    .cta-button {
-      display: inline-block;
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      color: white;
-      text-decoration: none;
-      padding: 18px 48px;
-      border-radius: 999px;
-      font-size: 18px;
-      font-weight: 700;
-      letter-spacing: 0.01em;
-      transition: transform 0.2s, box-shadow 0.2s, filter 0.2s;
-      box-shadow: 0 12px 30px rgba(79, 70, 229, 0.35);
-    }
+        .feature:last-child {
+            margin-bottom: 0;
+        }
 
-    .cta-button:hover {
-      transform: translateY(-2px);
-      filter: brightness(1.05);
-      box-shadow: 0 18px 38px rgba(79, 70, 229, 0.45);
-    }
+        .feature-icon {
+            color: var(--accent-color);
+            margin-right: 16px;
+            font-size: 18px;
+            flex-shrink: 0;
+            margin-top: 2px;
+            text-shadow: 0 0 10px rgba(212, 255, 0, 0.4);
+        }
 
-    .cta-button:active {
-      transform: translateY(0);
-      filter: brightness(0.98);
-    }
+        .cta-button {
+            display: inline-block;
+            background: var(--accent-color);
+            color: #000000;
+            text-decoration: none;
+            padding: 20px 50px;
+            border-radius: 50px;
+            font-size: 18px;
+            font-weight: 700;
+            margin: 10px 0 20px 0;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 0 20px rgba(212, 255, 0, 0.2);
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            position: relative;
+            z-index: 10;
+        }
 
-    .cta-button:focus-visible {
-      outline: 2px solid white;
-      outline-offset: 3px;
-    }
+        .cta-button:hover {
+            transform: translateY(-2px) scale(1.02);
+            box-shadow: 0 0 30px rgba(212, 255, 0, 0.4);
+            background: #e2ff3d;
+        }
 
-    .note {
-      font-size: 14px;
-      color: var(--muted);
-      margin-top: 12px;
-    }
+        .cta-button:active {
+            transform: translateY(0) scale(0.98);
+        }
 
-    .credentials {
-      margin-top: 28px;
-      padding-top: 20px;
-      border-top: 1px solid var(--border);
-      font-size: 13px;
-      color: var(--muted);
-      line-height: 1.6;
-      text-align: center;
-    }
+        .note {
+            font-size: 14px;
+            color: var(--text-muted);
+            margin-top: 20px;
+            font-weight: 400;
+        }
 
-    @media (max-width: 480px) {
-      .container {
-        padding: 32px 22px;
-        border-radius: 20px;
-      }
+        .credentials {
+            margin-top: 40px;
+            padding-top: 25px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            font-size: 13px;
+            color: var(--text-muted);
+            line-height: 1.6;
+        }
 
-      .title {
-        font-size: 28px;
-      }
+        @media (max-width: 480px) {
+            .container {
+                padding: 30px 20px;
+            }
 
-      .cta-button {
-        width: 100%;
-        padding: 16px 24px;
-        font-size: 17px;
-      }
-    }
+            h2 {
+                font-size: 26px;
+            }
 
-    @media (prefers-color-scheme: light) {
-      :root {
-        --bg-start: #eef2ff;
-        --bg-end: #ffffff;
-        --text: #111827;
-        --muted: #6b7280;
-        --card-bg: rgba(255, 255, 255, 0.75);
-        --border: rgba(17, 24, 39, 0.08);
-      }
+            .subtitle {
+                font-size: 16px;
+                margin-bottom: 30px;
+            }
 
-      body {
-        background: linear-gradient(135deg, #f5f7ff, #ffffff);
-      }
+            .emoji {
+                font-size: 52px;
+            }
 
-      .feature {
-        color: #374151;
-      }
-    }
-  </style>
+            .cta-button {
+                padding: 18px 30px;
+                font-size: 16px;
+                width: 100%;
+            }
+
+            .feature {
+                font-size: 14px;
+            }
+
+            .features {
+                padding: 20px;
+            }
+        }
+    </style>
 </head>
+
 <body>
-  <div class="container">
-    <div class="brand">
-      <div class="mark">AI</div>
+    <div class="container">
+        <span class="emoji">💼</span>
+
+        <h2>Упала мотивация?</h2>
+        <h2>Конфликты в команде?</h2>
+        <h2>Сотрудники бесят?</h2>
+
+        <p class="subtitle"><br>Получите советы от AI-консультанта прямо сейчас</p>
+
+        <div class="features">
+            <div class="feature">
+                <span class="feature-icon">✓</span>
+                <span>Опишите вашу ситуацию</span>
+            </div>
+            <div class="feature">
+                <span class="feature-icon">✓</span>
+                <span>Ответьте на 2-3 вопроса</span>
+            </div>
+            <div class="feature">
+                <span class="feature-icon">✓</span>
+                <span>Получите план: что сказать, как действовать, чего избегать</span>
+            </div>
+            <div class="feature">
+                <span class="feature-icon">X</span>
+                <span>Не передавайте AI-консультанту персональные данные</span>
+            </div>
+            <div class="feature">
+                <span class="feature-icon">X</span>
+                <span>Перед кадровыми решениями посоветуйтесь с HR и юристами</span>
+            </div>
+        </div>
+
+        <a href="https://t.me/as_hr_mentor_bot" class="cta-button" target="_blank">
+            Попробовать бесплатно
+        </a>
+
+        <p class="note">
+            Демо-режим в Telegram. Без регистрации.
+        </p>
+
+        <div class="credentials">
+            Основано на 20-летнем опыте работы с крупными компаниями РФ и СНГ<br>
+            (C) 2025, Mindfulness DOO
+        </div>
     </div>
-
-    <h1 class="title">AI-консультант для руководителей и HR</h1>
-
-    <div class="chips">
-      <span class="chip">Упала мотивация</span>
-      <span class="chip">Конфликты в команде</span>
-      <span class="chip">Сложные диалоги</span>
-    </div>
-
-    <p class="subtitle">Получите практичные рекомендации и план действий за несколько минут</p>
-
-    <div class="features">
-      <div class="feature">
-        <span class="feature-icon">✓</span>
-        <span>Опишите вашу ситуацию</span>
-      </div>
-      <div class="feature">
-        <span class="feature-icon">✓</span>
-        <span>Ответьте на 2–3 вопроса</span>
-      </div>
-      <div class="feature">
-        <span class="feature-icon">✓</span>
-        <span>Получите план: что сказать, как действовать, чего избегать</span>
-      </div>
-      <div class="feature">
-        <span class="feature-icon warn">!</span>
-        <span>Не передавайте AI-консультанту персональные данные</span>
-      </div>
-      <div class="feature">
-        <span class="feature-icon warn">!</span>
-        <span>Перед кадровыми решениями посоветуйтесь с HR и юристами</span>
-      </div>
-    </div>
-
-    <div class="cta">
-      <a href="https://t.me/as_hr_mentor_bot" class="cta-button" target="_blank" rel="noopener noreferrer">Попробовать бесплатно</a>
-      <p class="note">Демо-режим в Telegram. Без регистрации.</p>
-    </div>
-
-    <div class="credentials">
-      Основано на 20-летнем опыте работы с крупными компаниями РФ и СНГ<br>
-      (C) 2025, Mindfulness DOO
-    </div>
-  </div>
 </body>
+
 </html>
