--- a/index_dark.html
+++ b/index_dark.html
@@ -236,14 +236,14 @@
 
         <h2>Упала мотивация?</h2>
         <h2>Конфликты в команде?</h2>
-        <h2>Бесит руководитель?</h2>
+        <h2>Сотрудники бесят?</h2>
 
-        <p class="subtitle"><br>Поговорите с AI-консультантом прямо сейчас</p>
+        <p class="subtitle"><br>Получите советы от AI-консультанта прямо сейчас</p>
 
         <div class="features">
             <div class="feature">
                 <span class="feature-icon">✓</span>
-                <span>Опишите ситуацию</span>
+                <span>Опишите вашу ситуацию</span>
             </div>
             <div class="feature">
                 <span class="feature-icon">✓</span>
