--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AI-консультант для руководителей и HR">
-    <title>AI-консультант для руководителей и HR</title>
+    <meta name="description" content="AI-коуч для руководителей и HR">
+    <title>AI-коуч для руководителей и HR</title>
     <!-- Modern Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
