Update warning text and icon: Consult HR in complex situations

--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                 <span>Не передавайте AI-коучу персональные данные</span>
             </div>
             <div class="feature feature-warning">
-                <span class="feature-icon">X</span>
-                <span>Перед кадровыми решениями посоветуйтесь с HR</span>
+                <span class="feature-icon">!</span>
+                <span>В сложных ситуациях обратитесь к HR</span>
             </div>
         </div>
 
