Update landing page with dark theme improvements

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <span>Не обсуждайте персональные данные</span>
             </div>
             <div class="feature feature-warning">
-                <span class="feature-icon">→</span>
+                <span class="feature-icon">➔</span>
                 <span>В сложных ситуациях обратитесь к HR</span>
             </div>
         </div>
