--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AI-коуч для руководителей и HR">
-    <title>AI-коуч для руководителей и HR</title>
+    <meta name="description" content="AI-консультант для руководителей и HR">
+    <title>AI-консультант для руководителей и HR</title>
     <!-- Modern Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -271,21 +271,22 @@
 
         <h2>Упала мотивация?</h2>
         <h2>Конфликты в команде?</h2>
-        <h2>Бесит руководитель?</h2>
+        <h2>Бесят сотрудники?</h2>
 
-        <p class="subtitle"><br>Поговорите с AI-коучем прямо сейчас</p>
+        <p class="subtitle"><br>Поговорите с AI-консультантом прямо сейчас. Получите готовый план действий за 5 минут.
+            Без ожидания коуча, без книг, без догадок</p>
 
         <div class="features">
             <div class="feature">
-                <span class="feature-icon">✓</span>
+                <span class="feature-icon">01</span>
                 <span>Опишите ситуацию</span>
             </div>
             <div class="feature">
-                <span class="feature-icon">✓</span>
+                <span class="feature-icon">02</span>
                 <span>Ответьте на 2-3 вопроса</span>
             </div>
             <div class="feature">
-                <span class="feature-icon">✓</span>
+                <span class="feature-icon">03</span>
                 <span>Получите план: что сказать, как действовать, чего избегать</span>
             </div>
             <div class="feature feature-warning">
