--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
         <h2>Конфликты в команде?</h2>
         <h2>Бесят сотрудники?</h2>
 
-        <p class="subtitle"><br>Поговорите с AI-консультантом прямо сейчас. Получите готовый план действий за 5 минут.
-            Без ожидания коуча, без книг, без догадок</p>
+        <p class="subtitle"><br>Поговорите с AI-консультантом прямо сейчас. Без ожидания коуча, без книг, без догадок
+        </p>
 
         <div class="features">
             <div class="feature">
@@ -295,7 +295,7 @@
             </div>
             <div class="feature feature-warning">
                 <span class="feature-icon">➔</span>
-                <span>В сложных ситуациях обратитесь к HR</span>
+                <span>В сложных ситуациях обращайтесь к HR</span>
             </div>
         </div>
 
