style: Update accent and secondary text colors for improved theme.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         :root {
             --bg-dark: #121212;
             --bg-graphite: #1E1E1E;
-            --accent-color: #00F2FF;
+            --accent-color: #00FF66;
             /* Neon Green */
             --glass-bg: rgba(30, 30, 30, 0.6);
             --glass-border: rgba(255, 255, 255, 0.1);
             --text-main: #FFFFFF;
-            --text-secondary: #A0A0A0;
+            --text-secondary: #cecece;
             --text-muted: #666666;
             --accent-warning: #FF5500;
             --shadow-glow: 0 0 20px rgba(0, 242, 255, 0.15);
