--- a/index.html
+++ b/index.html
@@ -286,16 +286,15 @@
                 </svg>
             </div>
             <div class="ai-badge">AI-консультант</div>
+            <div class="ai-badge">ДЛЯ РУКОВОДИТЕЛЕЙ<br>И СОТРУДНИКОВ</div>
         </div>
 
         <h2>Упала мотивация?</h2>
         <h2>Конфликты в команде?</h2>
         <h2>Сложный разговор?</h2>
 
-        <p class="subtitle"><br>Получите готовый план действий за 5 минут. Без ожидания коуча, без книг, без
-            догадок
+        <p class="subtitle"><br>Получите готовый план действий за 5 минут
         </p>
-
         <div class="features">
             <div class="feature">
                 <span class="feature-icon">01</span>
